# Anime_Recommendation_AI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  evaluate_offline.py  gradio_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RESUME_BULLETS.md  SHOWCASE_CHECKLIST.md
src/: __init__.py  api.py  config.py  constants.py  data_preprocessing.py  evaluation.py  main.py  recommendation_engine.py  user_interface.py  utilities.py
tests/: test_evaluation.py  test_preprocessing.py  test_recommendation_engine.py
